# java-to-rust

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/java-parser/: Cargo.toml
crates/java-parser/src/: analyzer.rs  annotations.rs  dependency.rs  lib.rs  types.rs
crates/java-patterns/: Cargo.toml
crates/java-patterns/src/: android_ffi.rs  async_patterns.rs  guava_collections.rs  lib.rs  proptest_patterns.rs  spring_axum.rs
crates/rust-generator/: Cargo.toml
crates/rust-generator/src/: generator.rs  lib.rs  llm.rs  pattern_converter.rs  patterns.rs  prompt.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: comparator.rs  compiler.rs  fix_loop.rs  lib.rs
output/spring-axum/: Cargo.toml
output/spring-axum/src/: main.rs
profiles/android/: api_mappings.toml
profiles/generic/: api_mappings.toml
profiles/java-ee/: api_mappings.toml
profiles/spring-boot/: api_mappings.toml  jpa_mappings.toml
results/: oss-conversion-report.md  qa-review-pr2.md
scripts/: load-test-axum.js  load-test-spring.js
tests/fixtures/02_class_inheritance/: Animal.java  Dog.java  expected.rs
tests/fixtures/03_generics/: expected.rs
tests/fixtures/04_exception_handling/: FileReader.java  expected.rs
tests/fixtures/05_collections/: CollectionOps.java  expected.rs
tests/fixtures/06_synchronized/: Counter.java  expected.rs
tests/fixtures/07_stream_api/: StreamOps.java  expected.rs
tests/fixtures/08_spring_controller/: UserController.java  expected.rs
tests/fixtures/09_jpa_entity/: User.java  expected.rs
tests/fixtures/10_small_project/: pom.xml
tests/fixtures/10_small_project/src/main/java/com/example/: Calculator.java  Main.java
