[package]
name = "java-to-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
java-parser = { path = "../java-parser" }
rust-generator = { path = "../rust-generator" }
verifier = { path = "../verifier" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
