[package]
name = "java-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
