[package]
name = "rust-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
java-parser = { path = "../java-parser" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
