[package]
name = "verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust-generator = { path = "../rust-generator" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
