[workspace]

[package]
name = "spring-axum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spring-axum"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
std-semaphore = { version = "0.1", optional = true }
